--- a/less/base/typography.less
+++ b/less/base/typography.less
@@ -2,23 +2,20 @@ html {
  font-size: 100.01%;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  font-family: sans-serif;
- @include breakpoint(small) {
-   font-size: 13px;
- }
 }
 
 
 
 body {
-  font-family: $brand-font;
+  font-family: @brand-font;
   -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
   line-height: 1.43;
-  color: $grey;
+  color: @grey;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $brand-font;
+  font-family: @brand-font;
   margin: 0 0 10px;
   text-rendering: optimizeLegibility;
 }
@@ -39,4 +36,8 @@ h1 {
 // Links
 a {
   text-decoration: none;
+}
+
+.testing {
+  color: @blue;
 }
